--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
       <div class="right-panel">
         <img src="iconos/acceso-de-usuario.png" alt="Seguridad">
         <h2>SOFTVISION</h2>
-        <a href="#">Cambiar colegio</a>
+        
 
         <div class="input-group">
           <input type="text" placeholder="Usuario">
@@ -30,8 +30,8 @@
         <div class="input-group">
           <input type="password" placeholder="Contraseña">
         </div>
-
-        <button class="login-button">Iniciar sesión</button>
+        <a href="una_pagina.html"><button class="login-button">Iniciar sesión</button></a>
+        
 
         <div class="forgot-password">
           <a href="#">¿Olvidaste tu contraseña?</a>
