--- a/otra_pagina.html
+++ b/otra_pagina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOFTVISION - Mensajes</title>
-    <link rel="stylesheet" href="otra pagina.css">
+    <link rel="stylesheet" href="otra_pagina.css">
 </head>
 <body>
     <div class="container">
