--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="footer">
-    SOFTVISION ©2025 Todos los derechos reservados
+    SOFTVISION and jcanoProduction ©2025 Todos los derechos reservados
   </div>
 </body>
 </html>
